# taskbar_interface

./: Cargo.toml
examples/: progress.rs
src/: lib.rs
src/linux/: mod.rs  unity.rs  xapps.rs
src/macos/: mod.rs
src/windows/: mod.rs
